--- a/index.html
+++ b/index.html
@@ -1,1 +1,108 @@
-Hello World
+<!DOCTYPE html>
+<html lang="pt-BR">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Vidas Conectadas</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            line-height: 1.6;
+            color: #333;
+            background-color: #f4f4f4;
+        }
+        .container {
+            width: 80%;
+            margin: auto;
+            overflow: hidden;
+        }
+        header {
+            background: #333;
+            color: #fff;
+            padding-top: 30px;
+            min-height: 70px;
+            border-bottom: #ccc 3px solid;
+            text-align: center;
+        }
+        header h1 {
+            margin: 0;
+        }
+        h2 {
+            color: #333;
+        }
+        .content {
+            padding: 20px;
+            background: #fff;
+            margin-bottom: 20px;
+            border-radius: 8px;
+        }
+        ul {
+            list-style: none;
+            padding: 0;
+        }
+        ul li {
+            background: #eee;
+            margin-bottom: 5px;
+            padding: 10px;
+            border-radius: 4px;
+        }
+        .authors {
+            background: #eee;
+            padding: 10px;
+            border-radius: 4px;
+        }
+        .authors a {
+            color: #333;
+            text-decoration: none;
+        }
+        .authors a:hover {
+            text-decoration: underline;
+        }
+    </style>
+</head>
+<body>
+    <header>
+        <div class="container">
+            <h1>Vidas Conectadas</h1>
+        </div>
+    </header>
+
+    <div class="container">
+        <div class="content">
+            <p>Um projeto universitário da matéria de desenvolvimento web, criado com o intuito de compartilhar e engajar atitudes solidárias sobre doação de sangue.</p>
+        </div>
+
+        <div class="content">
+            <h2>Funcionalidades</h2>
+            <ul>
+                <li>Em breve...</li>
+            </ul>
+        </div>
+
+        <div class="content">
+            <h2>Stack utilizada</h2>
+            <p><strong>Front-end:</strong> HTML/CSS</p>
+            <p><strong>Back-end:</strong> PHP/Laravel</p>
+        </div>
+
+        <div class="content">
+            <h2>FAQ</h2>
+            <h3>Para quem esse projeto será direcionado?</h3>
+            <p>Para todas as pessoas que possuem dúvidas em relação a doação de sangue, e para aquelas que pretendem doar ou já doam.</p>
+        </div>
+
+        <div class="content authors">
+            <h2>Autores</h2>
+            <ul>
+                <li><a href="https://www.github.com/nisiq">@Nicole Siqueira</a></li>
+                <li><a href="https://www.github.com/juliaRobertav">@Julia Roberta</a></li>
+                <li><a href="https://www.github.com/AVITORIAC">@Allana Vieira</a></li>
+                <li><a href="https://www.github.com/danielcorte">@Daniel Corte</a></li>
+                <li><a href="https://www.github.com/eepuertas">@Eduarda Puertas</a></li>
+            </ul>
+        </div>
+    </div>
+</body>
+</html>
