--- a/cadastro.html
+++ b/cadastro.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="cadastro.css">
+    <link rel="stylesheet" href="./testhosp/page_cadastro/cadastro.css">
     <title>Formulário de Cadastro</title>
 </head>
 <body>
@@ -32,7 +32,7 @@
         </div>
 
         <div class="form-actions">
-            <a class="btn-submit" href="../page_login/login.html">Cadastrar</a>
+            <a class="btn-submit" href="./login.html">Cadastrar</a>
         </div>
     </form>
 </body>
