--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Vidas Conectadas</title>
-    <link rel="stylesheet" href="./docs/page_principal/styles.css">
+    <link rel="stylesheet" href="testhosp/page_principal/styles.css">
 </head>
 <body>
     <header class="header">
@@ -14,8 +14,8 @@
             <a href="#quem-somos">Quem somos</a>
             <a href="#duvidas">Dúvidas frequentes</a>
         </nav>
-        <a href="../table-history/table-history.html" class="header-login-button">Teste Histórico</a>
-        <a href="../page_login/login.html" class="header-login-button">Login</a>
+        <a href="./table-history.html" class="header-login-button">Teste Histórico</a>
+        <a href="./login.html" class="header-login-button">Login</a>
     </header>
 </body>
 </html>
