--- a/table-history.html
+++ b/table-history.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Histórico de Doações</title>
-    <link rel="stylesheet" href="table-history.css">
+    <link rel="stylesheet" href="./testhosp/table-history/table-history.css">
 </head>
 <body>
     <div class="container">
