--- a/login.html
+++ b/login.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pagina de Login</title>
-    <link rel="stylesheet" href="login.css">
+    <link rel="stylesheet" href="./testhosp/page_login/login.css">
 </head>
 <body>
     <body>
@@ -29,13 +29,13 @@
         <input type="checkbox" />
         <p>Lembrar-me</p>
       </div>
-      <a class="btn-login" href="../../index.html">Entrar</a>
+      <a class="btn-login" href="index.html">Entrar</a>
       <p>
         Esqueceu sua senha?
         <a href="https:/">Clique aqui</a>
       </p>
       <p>
-        <a href="../page_cadastro/cadastro.html">Novo Cadastro</a>
+        <a href="./cadastro.html">Novo Cadastro</a>
       </p>
     </form>
       </body>
