--- a/cadastro/cadastro.html
+++ b/cadastro/cadastro.html
@@ -6,8 +6,8 @@
     <link rel="stylesheet" href="./cadastro.css">
     <title>Formulário de Cadastro</title>
 </head>
-<body>
-    <form action="">
+<body> 
+    <form action="#" method="POST">
         <a href="../Index.html" id="iconelogin">
             <img src="../imgs/back-button.png" alt="voltar" style="width: 40px; height: 40px;">
         </a>
