--- a/cadastro/login.html
+++ b/cadastro/login.html
@@ -26,7 +26,7 @@
         </div>
     </form>
 
-    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
     <script>
         document.getElementById('loginForm').addEventListener('submit', function(event) {
             event.preventDefault();
@@ -46,7 +46,7 @@
                 }).showToast();
 
                 setTimeout(function() {
-                    window.location.href = "http://127.0.0.1:5501/logado-index-exemplo.html"; // Redireciona para a página principal
+                    window.location.href = "https://vidas-conectadas.github.io/vidas-conectadas/logado-index-exemplo.html"; // Redireciona para a página principal
                 }, 3000);
             } else {
                 Toastify({
