--- a/logado-index-exemplo.html
+++ b/logado-index-exemplo.html
@@ -29,7 +29,7 @@
 
 <body>
     <picture>
-        <img id="img_principal" src="imgs/image 2maior.png" alt="">
+        <img id="img_principal" src="imgs/image2maior.png" alt="">
     </picture>
 
     <div class="container">
@@ -101,7 +101,7 @@
 
 
 
-    <h2 id="Titulo">Requisitos para Doação</h2>
+    <h2 id="requisitosTitulo">Requisitos para Doação</h2>
     <div id="requisitos">
     
         <div id="texto_requisito">
@@ -139,7 +139,7 @@
 
     <div class="container-beneficios">
         <div class="column">
-            <img src="./imgs/meia-entrada-img.jpg" height="50%" width="100%">
+            <img src="./imgs/meia-entrada-img.jpg" style="width: 100%; height: auto;" alt="Meia-entrada">
             <h2>Meia-entrada </h2>
             <p>Em alguns estudos e municípios, os doadores regulares de sangue têm direito a pagar meia-entrada em
                 shows, cinemas, teatros e outros eventos culturais e esportivos.</p>
@@ -171,7 +171,7 @@
 
 
     <div id="duvidas_frequentes">
-        <h2 id="Titulo">DÚVIDAS FREQUENTES</h2>
+        <h2 id="duvidasTitulo">DÚVIDAS FREQUENTES</h2>
         <br>
         <h3>Quem tem tatuagem pode doar sangue?</h3>
         <p>Sim, desde que tenha feito a tatuagem há mais de um ano.</p>
