--- a/cadastro.html
+++ b/cadastro.html
@@ -7,7 +7,7 @@
     <title>Formulário de Cadastro</title>
 </head>
 <body>
-    <form action="">
+    <form action="#">
         <h1>Cadastro</h1>
 
         <label for="fname">Nome*</label>
