--- a/historico.html
+++ b/historico.html
@@ -70,13 +70,13 @@
 
                 <span class="close">&times;</span>
 
-                <form action="">
+                <form action="#">
                     <h2 class="title">Cadastrar</h2>
     
                     <label for="date">Data da doação:</label>
                     <div class="input">
                         <i class="bi bi-calendar"></i>
-                        <input type="date" id="date" placeholder="" name="date">
+                        <input type="date" id="date" name="date">
                     </div>
     
                     <label for="local">Local:</label>
@@ -127,6 +127,5 @@
 </html>
 
 
-    </div>
 </body>
 </html>
