--- a/index.html
+++ b/index.html
@@ -10,23 +10,23 @@
 
     <script src="https://kit.fontawesome.com/142e23d5c2.js" crossorigin="anonymous"></script>
 </head>
-<header>
-    <picture>
-        <img src="imgs/logo_mao.png" alt="" id="logo">
-    </picture>
-    <nav>
-        <a href="#">Onde Doar</a>
-        <a href="#">Requisitos</a>
-        <a href="#">Quem Somos</a>
-        <a href="#">Dúvidas Frequentes</a>
-    </nav>
-
-    <a href="cadastro/cadastro.html" id="iconelogin"><i class="fa-solid fa-user"
-        style="color: #ffffff; font-size: 40px;"></i></a>
-
-</header>
 
 <body>
+    <header>
+        <picture>
+            <img src="imgs/logo_mao.png" alt="" id="logo">
+        </picture>
+        <nav>
+            <a href="#">Onde Doar</a>
+            <a href="#">Requisitos</a>
+            <a href="#">Quem Somos</a>
+            <a href="#">Dúvidas Frequentes</a>
+        </nav>
+    
+        <a href="cadastro/cadastro.html" id="iconelogin"><i class="fa-solid fa-user"
+            style="color: #ffffff; font-size: 40px;"></i></a>
+    
+    </header>
     <picture>
         <img id="img_principal" src="imgs/image2maior.png" alt="">
     </picture>
@@ -138,20 +138,20 @@
 
     <div class="container-beneficios">
         <div class="column">
-            <img src="./imgs/meia-entrada-img.jpg" style="width: 100%; height: auto;" alt="Meia-entrada">
+            <img src="./imgs/meia-entrada-img.jpg" style="width: 100%; height: auto" alt="Meia-entrada">
             <h2>Meia-entrada </h2>
             <p>Em alguns estudos e municípios, os doadores regulares de sangue têm direito a pagar meia-entrada em
                 shows, cinemas, teatros e outros eventos culturais e esportivos.</p>
         </div>
         <div class="column">
-            <img src="./imgs/dispensa-trabalho-img.jpg" height="50%" width="100%">
+            <img src="./imgs/dispensa-trabalho-img.jpg"  style="width: 100%; height: auto">
             <h2>Dispensa do trabalho </h2>
             <p>De acordo com a Consolidação das Leis do Trabalho (CLT), o trabalhador tem direito a um dia de folga a
                 cada 12 meses trabalhados para doação de sangue voluntária, sem prejuízo no salário.</p>
 
         </div>
         <div class="column">
-            <img src="./imgs/prioridades-em-filas-img.jpg" height="50%" width="100%">
+            <img src="./imgs/prioridades-em-filas-img.jpg"  style="width: 100%; height: auto">
             <h2>Prioridade em filas</h2>
             <p>Em algumas cidades, doadores de sangue regulares podem ter prioridade em filas de atendimento, como em
                 bancos e repartições públicas.</p>
@@ -159,7 +159,7 @@
 
         </div>
         <div class="column">
-            <img src="./imgs/isenção-de-taxa-img.jpg" height="50%" width="100%">
+            <img src="./imgs/isenção-de-taxa-img.jpg"  style="width: 100%; height: auto">
             <h2>Isenção da taxa </h2>
             <p>Em algumas regiões, doadores regulares podem ser isentos do pagamento de taxa de inscrição em concursos
                 públicos municipais ou estaduais.</p>
