--- a/Index.html
+++ b/Index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt">
 
 <head>
     <meta charset="UTF-8">
@@ -10,25 +10,25 @@
 
     <script src="https://kit.fontawesome.com/142e23d5c2.js" crossorigin="anonymous"></script>
 </head>
-<header>
-    <picture>
-        <img src="imgs/logo_mao.png" alt="" id="logo">
-    </picture>
-    <nav>
-        <a href="#">Onde Doar</a>
-        <a href="#">Requisitos</a>
-        <a href="#">Quem Somos</a>
-        <a href="#">Dúvidas Frequentes</a>
-    </nav>
-
-    <a href="cadastro/cadastro.html" id="iconelogin"><i class="fa-solid fa-user"
-            style="color: #ffffff; font-size: 40px;"></i></a>
-
-</header>
 
 <body>
+    <header>
+        <picture>
+            <img src="imgs/logo_mao.png" alt="" id="logo">
+        </picture>
+        <nav>
+            <a href="#">Onde Doar</a>
+            <a href="#">Requisitos</a>
+            <a href="#">Dúvidas Frequentes</a>
+        </nav>
+
+        <a href="cadastro/cadastro.html" id="iconelogin"><i class="fa-solid fa-user"
+                style="color: #ffffff; font-size: 40px;"></i></a>
+
+    </header>
+
     <picture>
-        <img id="img_principal" src="imgs/image 2maior.png" alt="">
+        <img id="img_principal" src="imgs/image2maior.png" alt="">
     </picture>
 
     <div class="container">
@@ -102,7 +102,7 @@
 
     <h2 id="Titulo">Requisitos para Doação</h2>
     <div id="requisitos">
-    
+
         <div id="texto_requisito">
             <ul id="lista">
                 <li> Ter idade entre 16 e 69 anos, (menores de 18 anos devem apresentar consentimento formal do
@@ -110,7 +110,7 @@
                     legal);
                 </li>
                 <li>
-                    Pessoas com idade entre 60 e 69 anos só poderão doar sangue se já o tiverem feito antes dos 60 anos.
+                    Pessoas com idade entre 60 e 69 anos só poderão doar sangue se já o tiverem feito antes dos 60 anos.
                 </li>
                 <li>
                     Apresentar documento de identificação com foto emitido por órgão oficial (Carteira de Identidade,
@@ -138,20 +138,20 @@
 
     <div class="container-beneficios">
         <div class="column">
-            <img src="./imgs/meia-entrada-img.jpg" height="50%" width="100%">
+            <img src="./imgs/meia-entrada-img.jpg" height="50%" width="100%" alt="Meia-entrada">
             <h2>Meia-entrada </h2>
             <p>Em alguns estudos e municípios, os doadores regulares de sangue têm direito a pagar meia-entrada em
                 shows, cinemas, teatros e outros eventos culturais e esportivos.</p>
         </div>
         <div class="column">
-            <img src="./imgs/dispensa-trabalho-img.jpg" height="50%" width="100%">
+            <img src="./imgs/dispensa-trabalho-img.jpg" height="50%" width="100%" alt="dispensa">
             <h2>Dispensa do trabalho </h2>
             <p>De acordo com a Consolidação das Leis do Trabalho (CLT), o trabalhador tem direito a um dia de folga a
                 cada 12 meses trabalhados para doação de sangue voluntária, sem prejuízo no salário.</p>
 
         </div>
         <div class="column">
-            <img src="./imgs/prioridades-em-filas-img.jpg" height="50%" width="100%">
+            <img src="./imgs/prioridades-em-filas-img.jpg" height="50%" width="100%" alt="fila">
             <h2>Prioridade em filas</h2>
             <p>Em algumas cidades, doadores de sangue regulares podem ter prioridade em filas de atendimento, como em
                 bancos e repartições públicas.</p>
@@ -159,7 +159,7 @@
 
         </div>
         <div class="column">
-            <img src="./imgs/isenção-de-taxa-img.jpg" height="50%" width="100%">
+            <img src="./imgs/isenção-de-taxa-img.jpg" height="50%" width="100%" alt="taxa">
             <h2>Isenção da taxa </h2>
             <p>Em algumas regiões, doadores regulares podem ser isentos do pagamento de taxa de inscrição em concursos
                 públicos municipais ou estaduais.</p>
