adicionando style nas imgs

--- a/Index.html
+++ b/Index.html
@@ -100,7 +100,7 @@
 
 
 
-    <h2 id="Titulo">Requisitos para Doação</h2>
+    <h2 id="Titulo2">Requisitos para Doação</h2>
     <div id="requisitos">
 
         <div id="texto_requisito">
@@ -138,20 +138,20 @@
 
     <div class="container-beneficios">
         <div class="column">
-            <img src="./imgs/meia-entrada-img.jpg" height="50%" width="100%" alt="Meia-entrada">
+            <img src="./imgs/meia-entrada-img.jpg" style=" height:50%; width:100% " alt="Meia-entrada">
             <h2>Meia-entrada </h2>
             <p>Em alguns estudos e municípios, os doadores regulares de sangue têm direito a pagar meia-entrada em
                 shows, cinemas, teatros e outros eventos culturais e esportivos.</p>
         </div>
         <div class="column">
-            <img src="./imgs/dispensa-trabalho-img.jpg" height="50%" width="100%" alt="dispensa">
+            <img src="./imgs/dispensa-trabalho-img.jpg" style=" height:50%; width:100% " alt="dispensa">
             <h2>Dispensa do trabalho </h2>
             <p>De acordo com a Consolidação das Leis do Trabalho (CLT), o trabalhador tem direito a um dia de folga a
                 cada 12 meses trabalhados para doação de sangue voluntária, sem prejuízo no salário.</p>
 
         </div>
         <div class="column">
-            <img src="./imgs/prioridades-em-filas-img.jpg" height="50%" width="100%" alt="fila">
+            <img src="./imgs/prioridades-em-filas-img.jpg" style=" height:50%; width:100% " alt="fila">
             <h2>Prioridade em filas</h2>
             <p>Em algumas cidades, doadores de sangue regulares podem ter prioridade em filas de atendimento, como em
                 bancos e repartições públicas.</p>
@@ -159,7 +159,7 @@
 
         </div>
         <div class="column">
-            <img src="./imgs/isenção-de-taxa-img.jpg" height="50%" width="100%" alt="taxa">
+            <img src="./imgs/isenção-de-taxa-img.jpg" style=" height:50%; width:100% " alt="taxa">
             <h2>Isenção da taxa </h2>
             <p>Em algumas regiões, doadores regulares podem ser isentos do pagamento de taxa de inscrição em concursos
                 públicos municipais ou estaduais.</p>
