--- a/logado-index-exemplo.html
+++ b/logado-index-exemplo.html
@@ -13,13 +13,11 @@
 
 <body>
     <header>
-
-        <picture>
-            <a href="Index.html">
+        <a href="Index.html">
+            <picture>
                 <img src="imgs/logo_mao.png" alt="" id="logo">
-            </a>
-        </picture>
-
+            </picture>
+        </a>
         <nav>
             <a href="#">Onde Doar</a>
             <a href="#">Requisitos</a>
@@ -148,14 +146,14 @@
                 shows, cinemas, teatros e outros eventos culturais e esportivos.</p>
         </div>
         <div class="column">
-            <img src="./imgs/dispensa-trabalho-img.jpg" height="50%" width="100%" alt="dispensa">
+            <img src="./imgs/dispensa-trabalho-img.jpg" style=" height:50%; width:100% "alt="dispensa">
             <h2>Dispensa do trabalho </h2>
             <p>De acordo com a Consolidação das Leis do Trabalho (CLT), o trabalhador tem direito a um dia de folga a
                 cada 12 meses trabalhados para doação de sangue voluntária, sem prejuízo no salário.</p>
 
         </div>
         <div class="column">
-            <img src="./imgs/prioridades-em-filas-img.jpg" height="50%" width="100%" alt="fila">
+            <img src="./imgs/prioridades-em-filas-img.jpg" style=" height:50%; width:100% " alt="fila">
             <h2>Prioridade em filas</h2>
             <p>Em algumas cidades, doadores de sangue regulares podem ter prioridade em filas de atendimento, como em
                 bancos e repartições públicas.</p>
@@ -163,7 +161,7 @@
 
         </div>
         <div class="column">
-            <img src="./imgs/isenção-de-taxa-img.jpg" height="50%" width="100%" alt="taxa">
+            <img src="./imgs/isenção-de-taxa-img.jpg" style=" height:50%; width:100% " alt="taxa">
             <h2>Isenção da taxa </h2>
             <p>Em algumas regiões, doadores regulares podem ser isentos do pagamento de taxa de inscrição em concursos
                 públicos municipais ou estaduais.</p>
