--- a/historico.html
+++ b/historico.html
@@ -23,12 +23,14 @@
             <a href="#">Dúvidas Frequentes</a>
         </nav>
 
-        <a href="Index.html" id="iconelogin"><i class="fa-solid fa-user"
+        <a href="logado-index-exemplo.html" id="iconelogin"><i class="fa-solid fa-user"
                 style="color: #ffffff; font-size: 40px;"></i></a>
 
     </header>
     <div class="container">
-        <i class="fa-solid fa-circle-arrow-left" style="color: #e93939; font-size: 20px;"></i>
+        <a href="logado-index-exemplo.html">
+            <i class="fa-solid fa-circle-arrow-left" style="color: #e93939; font-size: 20px;"></i>
+        </a>
         <div class="credenciais">
             <p>João da Silva</p>
             <p>123.456.789-00</p>
