--- a/cadastro/login.html
+++ b/cadastro/login.html
@@ -15,10 +15,10 @@
         <h1>Login</h1>
 
         <label for="lemail">Email</label>
-        <input type="email" id="lemail" name="lemail" required>
+        <input type="email" id="lemail" name="lemail" placeholder="Email@gmail.com" required>
 
         <label for="lsenha">Senha</label>
-        <input type="password" id="lsenha" name="lsenha" required maxlength="10" minlength="5">
+        <input type="password" id="lsenha" name="lsenha" placeholder="Senha" required maxlength="10" minlength="5">
         <a href="cadastro.html" class="link-criar-conta">Criar conta</a>
 
         <div class="form-actions">
